; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_bus_message_get_arg.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_bus_message_get_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SD_BUS_TYPE_STRING = common dso_local global i32 0, align 4
@SD_BUS_TYPE_OBJECT_PATH = common dso_local global i32 0, align 4
@SD_BUS_TYPE_SIGNATURE = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_message_get_arg(i8** %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i8, align 1
  %9 = alloca i32, align 4
  store i8** %0, i8*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %10 = load i8**, i8*** %5, align 8
  %11 = call i32 @assert(i8** %10)
  %12 = load i8**, i8*** %7, align 8
  %13 = call i32 @assert(i8** %12)
  %14 = load i8**, i8*** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @bus_message_get_arg_skip(i8** %14, i32 %15, i8* %8, i32* null)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  store i32 %20, i32* %4, align 4
  br label %36

21:                                               ; preds = %3
  %22 = load i8, i8* %8, align 1
  %23 = load i32, i32* @SD_BUS_TYPE_STRING, align 4
  %24 = load i32, i32* @SD_BUS_TYPE_OBJECT_PATH, align 4
  %25 = load i32, i32* @SD_BUS_TYPE_SIGNATURE, align 4
  %26 = call i32 @IN_SET(i8 signext %22, i32 %23, i32 %24, i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %21
  %29 = load i32, i32* @ENXIO, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %4, align 4
  br label %36

31:                                               ; preds = %21
  %32 = load i8**, i8*** %5, align 8
  %33 = load i8, i8* %8, align 1
  %34 = load i8**, i8*** %7, align 8
  %35 = call i32 @sd_bus_message_read_basic(i8** %32, i8 signext %33, i8** %34)
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %31, %28, %19
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @assert(i8**) #1

declare dso_local i32 @bus_message_get_arg_skip(i8**, i32, i8*, i32*) #1

declare dso_local i32 @IN_SET(i8 signext, i32, i32, i32) #1

declare dso_local i32 @sd_bus_message_read_basic(i8**, i8 signext, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
